@@ -1,6 +1,13 @@
 v3.11.0 (XXXX-XX-XX)
 --------------------
 
+* In batched query results, when executing requests for 
+  `/_api/cursor/<cursorId>/<batchId>`, removed the restriction that the user 
+  would only be able to fetch the next batch using the next batch id in 
+  <batchId> if the query option `allowRetry` was set to true, but maintained
+  the restriction that the user can only retrieve the latest batch if the
+  query option `allowRetry` is set to true.
+
 * Fixed BTS-1398: GEO_DISTANCE() for ArangoSearch geo_s2 analyzer.
 
 * Improved error reporting for system calls on Windows and fixed a
